# zap

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: test_zap.py
zap/: __init__.py  core.py
