[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zap-sh"
version = "0.1.0"
description = "Python subprocess, but actually nice."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "TRINITY-21" }]
keywords = ["subprocess", "shell", "cli", "command", "process"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Shells",
]

[project.urls]
Homepage = "https://github.com/TRINITY-21/zap"
Source = "https://github.com/TRINITY-21/zap"
Issues = "https://github.com/TRINITY-21/zap/issues"

[tool.setuptools.packages.find]
include = ["zap*"]
